# sandbox

./: Makefile  card.py  pyproject.toml  readability.py
sandbox/cs_50/: test_card.py  test_readability.py
sandbox/cs_50/dna/: dna.py
